# proyectoTaller1

./: CMakeLists.txt  Matrix.cpp  Matrix.h  notas.txt
include/: Accel.h  AccelHarmonic.h  AccelPointMass.h  AzElPa.h  Cheb3D.h  Const.h  DEInteg.h  EKF_GEOS3.h  EccAnom.h  EqnEquinox.h  Frac.h  GHAMatrix.h  G_AccelHarmonic.h  Geodetic.h  Globals.h  IERS.h  JPL_Eph_DE430.h  LTC.h  Legendre.h  Matrix.h  MeanObliquity.h  MeasUpdate.h  Mjday.h  Mjday_TDB.h  NutAngles.h  PoleMatrix.h  Position.h  PrecMatrix.h  R_x.h  R_y.h  R_z.h  SAT_Const.h  TimeUpdate.h  VarEqn.h  angl.h  doubler.h  elements.h  gast.h  gibbs.h  gmst.h  (+4 more)
src/: Accel.cpp  AccelHarmonic.cpp  AccelPointMass.cpp  AzElPa.cpp  Cheb3D.cpp  DEInteg.cpp  EKF_GEOS3.cpp  EccAnom.cpp  EqnEquinox.cpp  Frac.cpp  GHAMatrix.cpp  G_AccelHarmonic.cpp  Geodetic.cpp  Globals.cpp  IERS.cpp  JPL_Eph_DE430.cpp  LTC.cpp  Legendre.cpp  Matrix.cpp  MeanObliquity.cpp  MeasUpdate.cpp  Mjday.cpp  Mjday_TDB.cpp  NutAngles.cpp  PoleMatrix.cpp  Position.cpp  PrecMatrix.cpp  R_x.cpp  R_y.cpp  R_z.cpp  TimeUpdate.cpp  VarEqn.cpp  angl.cpp  doubler.cpp  elements.cpp  gast.cpp  gibbs.cpp  gmst.cpp  nutMatrix.cpp  ode.cpp  (+4 more)
test/: Main.cpp  TestAccel.cpp  testAccelHarmonic.cpp  testAccelPointMass.cpp  testAzElPa.cpp  testCheb3D.cpp  testDEInteg.cpp  testDoubler.cpp  testEccAnom.cpp  testElements.cpp  testEqnEquinox.cpp  testFrac.cpp  testGHAMatrix.cpp  testG_AccelHarmonic.cpp  testGast.cpp  testGeodetic.cpp  testGmst.cpp  testIERS.cpp  testLegendre.cpp  testMeanObliquity.cpp  testMeasUpdate.cpp  testMjday.cpp  testMjday_TDB.cpp  testNutAngles.cpp  testNutMatrix.cpp  testPoleMatrix.cpp  testPosition.cpp  testPrecMatrix.cpp  testR_x.cpp  testR_y.cpp  testR_z.cpp  testSign_.cpp  testTimeUpdate.cpp  testUnit.cpp  testVarEqn.cpp
