cmake_minimum_required(VERSION 3.23)
project(proyectoTaller1)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)

add_executable(proyectoTaller1
        include/AccelPointMass.h
        include/angl.h
        include/AzElPa.h
        include/Cheb3D.h
        include/EccAnom.h
        include/Frac.h
        include/LTC.h
        include/Matrix.h
        include/R_x.h
        include/R_y.h
        include/R_z.h
        include/Geodetic.h
        include/Globals.h
        include/SAT_Const.h
        include/Legendre.h
        include/IERS.h
        include/MeanObliquity.h
        include/Mjday.h
        include/Mjday_TDB.h
        include/NutAngles.h
        include/Position.h
        include/sign_.h
        include/timediff.h
        include/unit.h
        include/PoleMatrix.h
        include/EqnEquinox.h
        include/GHAMatrix.h
        include/gmst.h
        include/gast.h
        include/AccelHarmonic.h
        include/MeasUpdate.h
        include/nutMatrix.h
        include/PrecMatrix.h
        include/TimeUpdate.h
        include/doubler.h
        include/elements.h
        include/JPL_Eph_DE430.h
        include/gibbs.h
        include/VarEqn.h
        include/EKF_GEOS3.h
        include/G_AccelHarmonic.h
        include/DEInteg.h
        include/Accel.h


        src/Accel.cpp
        src/AccelPointMass.cpp
        src/angl.cpp
        src/AzElPa.cpp
        src/Cheb3D.cpp
        src/EccAnom.cpp
        src/Frac.cpp
        src/LTC.cpp
        src/Matrix.cpp
        src/R_x.cpp
        src/R_y.cpp
        src/R_z.cpp
        src/Geodetic.cpp
        src/Globals.cpp
        src/IERS.cpp
        src/Legendre.cpp
        src/MeanObliquity.cpp
        src/Mjday.cpp
        src/Mjday_TDB.cpp
        src/NutAngles.cpp
        src/Position.cpp
        src/sign_.cpp
        src/unit.cpp
        src/timediff.cpp
        src/PoleMatrix.cpp
        src/EqnEquinox.cpp
        src/GHAMatrix.cpp
        src/gmst.cpp
        src/gast.cpp
        src/AccelHarmonic.cpp
        src/MeasUpdate.cpp
        src/PrecMatrix.cpp
        src/nutMatrix.cpp
        src/TimeUpdate.cpp
        src/doubler.cpp
        src/JPL_Eph_DE430.cpp
        src/DEInteg.cpp
        src/gibbs.cpp
        src/elements.cpp
        src/VarEqn.cpp
        src/G_AccelHarmonic.cpp
        #src/EKF_GEOS3.cpp


        #test/testAzElPa.cpp
        #test/testCheb3D.cpp
        #test/testEccAnom.cpp
        #test/testAccelPointMass.cpp
        #test/Main.cpp
        #test/testFrac.cpp
        #test/testR_x.cpp
        #test/testR_y.cpp
        #test/testR_z.cpp
        #test/testGeodetic.cpp
        #test/testIERS.cpp
        #test/testLegendre.cpp
        #test/testMeanObliquity.cpp
        #test/testMjday.cpp
        #test/testMjday_TDB.cpp
        #test/testPosition.cpp
        #test/testSign_.cpp
        #test/testTimediff.cpp
        #test/testUnit.cpp
        #test/testPoleMatrix.cpp
        #test/testNutAngles.cpp
        #test/testEqnEquinox.cpp
        #test/testGmst.cpp
        #test/testGast.cpp
        #test/testGHAMatrix.cpp
        #test/testNutMatrix.cpp
        #test/testTimeUpdate.cpp
        #test/testPrecMatrix.cpp
        #test/testElements.cpp
        #test/testMeasUpdate.cpp
        #test/testDEInteg.cpp
        #test/testVarEqn.cpp
        #test/testAccelHarmonic.cpp
        #test/TestAccel.cpp
        test/testG_AccelHarmonic.cpp
        #test/testDoubler.cpp


        )
